--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=firstproject
+spring.application.name=Springfirstproject
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
 
-ffgi
